Finalized data wrangling

--- a/notebooks/1.0-jm-initial-data-exploration.ipynb
+++ b/notebooks/1.0-jm-initial-data-exploration.ipynb
@@ -157,17 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "f7aca5df-4da1-4918-9519-62ca76b9051f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Unique counts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 138,
    "id": "8f841487-5f6c-48e2-86c9-eef84e6dd1dc",
    "metadata": {},
    "outputs": [
@@ -181,6 +171,7 @@
     }
    ],
    "source": [
+    "# Unique counts\n",
     "print(f\"Number of unique users: {ratings['userId'].nunique()}\")\n",
     "print(f\"Number of unique movies: {movies['movieId'].nunique()}\")"
    ]
@@ -297,17 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "15a180bc-b1ba-4090-8c61-d1c6fcb5d687",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check for missing values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 139,
    "id": "ef28929c-3533-465e-8e3f-06269f08349f",
    "metadata": {},
    "outputs": [
@@ -315,36 +296,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "movieId    0\n",
-      "title      0\n",
-      "genres     0\n",
+      "movieId         0\n",
+      "title           0\n",
+      "genres          0\n",
+      "rating_count    0\n",
       "dtype: int64\n",
-      "userId       0\n",
-      "movieId      0\n",
-      "rating       0\n",
-      "timestamp    0\n",
+      "userId               0\n",
+      "movieId              0\n",
+      "rating               0\n",
+      "timestamp            0\n",
+      "year                 0\n",
+      "user_rating_count    0\n",
       "dtype: int64\n"
      ]
     }
    ],
    "source": [
+    "# Check for missing values\n",
     "print(movies.isnull().sum())\n",
     "print(ratings.isnull().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "477fc360-a9a5-4144-bfd2-95fb54e267bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert timestamps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 140,
    "id": "8e0e420a-21a7-43d2-843f-caa3c7b705db",
    "metadata": {},
    "outputs": [
@@ -352,16 +327,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   userId  movieId  rating           timestamp  year\n",
-      "0       1        2     3.5 2005-04-02 23:53:47  2005\n",
-      "1       1       29     3.5 2005-04-02 23:31:16  2005\n",
-      "2       1       32     3.5 2005-04-02 23:33:39  2005\n",
-      "3       1       47     3.5 2005-04-02 23:32:07  2005\n",
-      "4       1       50     3.5 2005-04-02 23:29:40  2005\n"
+      "   userId  movieId  rating           timestamp  year  user_rating_count\n",
+      "0       1        2     3.5 2005-04-02 23:53:47  2005                175\n",
+      "1       1       29     3.5 2005-04-02 23:31:16  2005                175\n",
+      "2       1       32     3.5 2005-04-02 23:33:39  2005                175\n",
+      "3       1       47     3.5 2005-04-02 23:32:07  2005                175\n",
+      "4       1       50     3.5 2005-04-02 23:29:40  2005                175\n"
      ]
     }
    ],
    "source": [
+    "# Convert timestamps\n",
     "ratings['timestamp'] = pd.to_datetime(ratings['timestamp'])\n",
     "# Extract year\n",
     "ratings['year'] = ratings['timestamp'].dt.year\n",
@@ -370,17 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "34ed9ec6-1aca-4893-9ad9-69931960cd37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check for duplicate ratings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 141,
    "id": "8d328727-0f8e-4ac0-8b41-3875014b0162",
    "metadata": {},
    "outputs": [
@@ -389,12 +355,13 @@
      "output_type": "stream",
      "text": [
       "Empty DataFrame\n",
-      "Columns: [userId, movieId, rating, timestamp, year]\n",
+      "Columns: [userId, movieId, rating, timestamp, year, user_rating_count]\n",
       "Index: []\n"
      ]
     }
    ],
    "source": [
+    "# Check for duplicate ratings\n",
     "duplicate_ratings = ratings[ratings.duplicated(subset=['userId', 'movieId'], keep=False)]\n",
     "print(duplicate_ratings)"
    ]
@@ -537,12 +504,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 145,
    "id": "b2e21729-f203-4165-87ae-d9cc971397a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Findings: There are many movies with minimal rating data.  All users have rated 20 or more films."
+    "# Findings: There are many movies with minimal rating data that we should remove.  All users have rated 20 or more films which is a good minimum."
    ]
   },
   {
