--- a/notebooks/NCF.ipynb
+++ b/notebooks/NCF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "f676ce48",
    "metadata": {},
    "outputs": [
@@ -19,6 +19,7 @@
     "from tensorflow.keras import layers, Model\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import time\n",
     "import pickle\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -32,19 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "c6606697",
    "metadata": {},
    "outputs": [],
    "source": [
     "TOP_K = 10\n",
-    "EPOCHS = 5\n",
+    "EPOCHS = 100\n",
     "BATCH_SIZE = 256"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "22b61521",
    "metadata": {},
    "outputs": [
@@ -59,14 +60,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jmalo\\AppData\\Local\\Temp\\ipykernel_15768\\3872602745.py:13: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\jmalo\\AppData\\Local\\Temp\\ipykernel_30140\\3872602745.py:13: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  test_data['userID'].fillna(0, inplace=True)\n",
-      "C:\\Users\\jmalo\\AppData\\Local\\Temp\\ipykernel_15768\\3872602745.py:14: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\jmalo\\AppData\\Local\\Temp\\ipykernel_30140\\3872602745.py:14: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "3ed29fc3",
    "metadata": {},
    "outputs": [
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "a6a74c78",
    "metadata": {},
    "outputs": [
@@ -161,23 +162,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 1ms/step - accuracy: 0.6831 - loss: 0.5865 - val_accuracy: 0.7257 - val_loss: 0.5402\n",
-      "Epoch 2/5\n",
-      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7313 - loss: 0.5297 - val_accuracy: 0.7298 - val_loss: 0.5342\n",
-      "Epoch 3/5\n",
-      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7371 - loss: 0.5196 - val_accuracy: 0.7333 - val_loss: 0.5290\n",
-      "Epoch 4/5\n",
-      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7453 - loss: 0.5088 - val_accuracy: 0.7353 - val_loss: 0.5262\n",
-      "Epoch 5/5\n",
-      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7513 - loss: 0.5000 - val_accuracy: 0.7359 - val_loss: 0.5259\n",
-      "Total training time: 15.56 seconds\n",
-      "\u001b[1m6252/6252\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 804us/step\n",
-      "MAP: 0.573335\n",
-      "NDCG: 1.000274\n",
-      "Precision@K: 0.888688\n",
-      "Recall@K: 0.573335\n",
-      "Model saved as 'ncf_model1.keras'\n"
+      "Epoch 1/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 1ms/step - accuracy: 0.6843 - loss: 0.5866 - val_accuracy: 0.7261 - val_loss: 0.5411\n",
+      "Epoch 2/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7304 - loss: 0.5317 - val_accuracy: 0.7276 - val_loss: 0.5358\n",
+      "Epoch 3/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7343 - loss: 0.5232 - val_accuracy: 0.7304 - val_loss: 0.5323\n",
+      "Epoch 4/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7401 - loss: 0.5154 - val_accuracy: 0.7333 - val_loss: 0.5295\n",
+      "Epoch 5/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7460 - loss: 0.5057 - val_accuracy: 0.7351 - val_loss: 0.5268\n",
+      "Epoch 6/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7518 - loss: 0.4971 - val_accuracy: 0.7354 - val_loss: 0.5275\n",
+      "Epoch 7/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7571 - loss: 0.4896 - val_accuracy: 0.7344 - val_loss: 0.5293\n",
+      "Epoch 8/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7629 - loss: 0.4811 - val_accuracy: 0.7349 - val_loss: 0.5325\n",
+      "Epoch 9/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7660 - loss: 0.4751 - val_accuracy: 0.7335 - val_loss: 0.5337\n",
+      "Epoch 10/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7703 - loss: 0.4699 - val_accuracy: 0.7318 - val_loss: 0.5379\n",
+      "Epoch 11/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7739 - loss: 0.4641 - val_accuracy: 0.7322 - val_loss: 0.5393\n",
+      "Epoch 12/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7766 - loss: 0.4604 - val_accuracy: 0.7317 - val_loss: 0.5438\n",
+      "Epoch 13/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7799 - loss: 0.4548 - val_accuracy: 0.7307 - val_loss: 0.5452\n",
+      "Epoch 14/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7820 - loss: 0.4506 - val_accuracy: 0.7307 - val_loss: 0.5512\n",
+      "Epoch 15/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7838 - loss: 0.4480 - val_accuracy: 0.7280 - val_loss: 0.5560\n",
+      "Epoch 16/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7850 - loss: 0.4456 - val_accuracy: 0.7284 - val_loss: 0.5599\n",
+      "Epoch 17/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7878 - loss: 0.4419 - val_accuracy: 0.7279 - val_loss: 0.5644\n",
+      "Epoch 18/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7883 - loss: 0.4391 - val_accuracy: 0.7253 - val_loss: 0.5703\n",
+      "Epoch 19/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7904 - loss: 0.4359 - val_accuracy: 0.7283 - val_loss: 0.5727\n",
+      "Epoch 20/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7919 - loss: 0.4345 - val_accuracy: 0.7252 - val_loss: 0.5723\n",
+      "Epoch 21/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7924 - loss: 0.4325 - val_accuracy: 0.7252 - val_loss: 0.5783\n",
+      "Epoch 22/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7935 - loss: 0.4297 - val_accuracy: 0.7226 - val_loss: 0.5834\n",
+      "Epoch 23/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7952 - loss: 0.4278 - val_accuracy: 0.7235 - val_loss: 0.5895\n",
+      "Epoch 24/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7959 - loss: 0.4257 - val_accuracy: 0.7243 - val_loss: 0.5930\n",
+      "Epoch 25/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7970 - loss: 0.4246 - val_accuracy: 0.7227 - val_loss: 0.5947\n",
+      "Epoch 26/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7967 - loss: 0.4229 - val_accuracy: 0.7212 - val_loss: 0.5960\n",
+      "Epoch 27/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7977 - loss: 0.4228 - val_accuracy: 0.7235 - val_loss: 0.6088\n",
+      "Epoch 28/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7987 - loss: 0.4201 - val_accuracy: 0.7219 - val_loss: 0.6057\n",
+      "Epoch 29/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.7985 - loss: 0.4198 - val_accuracy: 0.7236 - val_loss: 0.6105\n",
+      "Epoch 30/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.8008 - loss: 0.4168 - val_accuracy: 0.7196 - val_loss: 0.6200\n",
+      "Epoch 31/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.8000 - loss: 0.4175 - val_accuracy: 0.7220 - val_loss: 0.6271\n",
+      "Epoch 32/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.8015 - loss: 0.4150 - val_accuracy: 0.7188 - val_loss: 0.6291\n",
+      "Epoch 33/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.8014 - loss: 0.4137 - val_accuracy: 0.7215 - val_loss: 0.6381\n",
+      "Epoch 34/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.8023 - loss: 0.4127 - val_accuracy: 0.7219 - val_loss: 0.6332\n",
+      "Epoch 35/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.8034 - loss: 0.4105 - val_accuracy: 0.7180 - val_loss: 0.6451\n",
+      "Epoch 36/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.8037 - loss: 0.4096 - val_accuracy: 0.7202 - val_loss: 0.6495\n",
+      "Epoch 37/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.8042 - loss: 0.4092 - val_accuracy: 0.7176 - val_loss: 0.6561\n",
+      "Epoch 38/100\n",
+      "\u001b[1m2501/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.8035 - loss: 0.4081 - val_accuracy: 0.7174 - val_loss: 0.6596\n",
+      "Epoch 39/100\n",
+      "\u001b[1m2156/2501\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.8067 - loss: 0.4043"
      ]
     }
    ],
@@ -189,11 +251,31 @@
     "\n",
     "    start_time = time.time()\n",
     "\n",
-    "    model.fit([user_input, item_input], labels, epochs=EPOCHS, batch_size=BATCH_SIZE, validation_split=0.2)\n",
+    "    history = model.fit(\n",
+    "        [user_input, item_input], \n",
+    "        labels, \n",
+    "        epochs=EPOCHS, \n",
+    "        batch_size=BATCH_SIZE, \n",
+    "        validation_split=0.2\n",
+    "    )\n",
     "\n",
     "    end_time = time.time()\n",
     "    elapsed_time = end_time - start_time\n",
     "    print(f\"Total training time: {elapsed_time:.2f} seconds\")\n",
+    "\n",
+    "    train_acc = history.history['accuracy']\n",
+    "    val_acc = history.history['val_accuracy']\n",
+    "    epochs = range(1, len(train_acc) + 1)\n",
+    "\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(epochs, train_acc, label='Training Accuracy')\n",
+    "    plt.plot(epochs, val_acc, label='Validation Accuracy', linestyle='--')\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.ylabel('Accuracy')\n",
+    "    plt.title('Training and Validation Accuracy')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
     "\n",
     "    with open('user_mapping.pkl', 'wb') as f:\n",
     "        pickle.dump(user_mapping, f)\n",
@@ -219,8 +301,8 @@
     "        f\"Recall@K: {eval_recall:.6f}\"\n",
     "    )\n",
     "\n",
-    "    model.save('M:/Movie-Recommendation-Engine/models/ncf_model1.keras')\n",
-    "    print(\"Model saved as 'ncf_model1.keras'\")"
+    "    model.save('M:/Movie-Recommendation-Engine/models/ncf_model.keras')\n",
+    "    print(\"Model saved as 'ncf_model.keras'\")"
    ]
   }
  ],
